--- a/04-graphics.Rmd
+++ b/04-graphics.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(
 ```{r}
 library(tidyverse)
 library(ggpubr)
+library(RColorBrewer)
 ```
 
 ## Frequency distributions
@@ -22,10 +23,52 @@ Qualitative data that describe group representivity to various categories are be
 
 The first case of a frequency distribution histogram is one that shows the raw counts per each of the categories that are represented in the data. The count within each of the categories (represented by a bar graph called a histogram) sums to the sample size, $n$. In the second case, we may want to report that data as proportions. Here we show the frequency proportion in a collection of non-overlapping categories. For example, we have a sample size of 12 ($n=12$). In this sample, two are coloured blue, six red, and five purple. The relative proportions are $2/12=0.1666667$ blue, $6/12=0.5$ red, and $5/12=0.4166667$ purple. The important thing to note here is that the relative proportions sum to 1, i.e. $0.1666667+0.5+0.4166667=1$. These data may be presented as a table or as a graph.
 
+Let us demonstrate the numerical and graphical summaries using the built-in `iris` data:
+
+```{r}
+# the numerical summary produced by a piped series of functions
+# create a summary of the data (i.e. number of replicates per species)
+# used for (A), (B) and (C)
+iris.cnt <- iris %>%
+  count(Species) %>% 
+  mutate(prop = n / sum(n))
+iris.cnt
+```
+
 <!-- show example of frequency distribution bar graph -->
 ```{r}
-ggplot(data = iris, aes(x = Species, fill = Species)) +
-  geom_bar()
+# a stacked bar graph with the cumulative sum of observations
+plt1 <- ggplot(data = iris.cnt, aes(x = "", y = n, fill = Species)) +
+  geom_bar(width = 1, stat = "identity") +
+  labs(title = "Stacked bar graph", subtitle = "cumulative sum",
+       x = NULL, y = "Count") + 
+  theme_minimal()
+
+# a stacked bar graph with the relative proportions of observations
+plt2 <- ggplot(data = iris.cnt, aes(x = "", y = prop, fill = Species)) +
+  geom_bar(width = 1, stat = "identity") +
+  scale_y_continuous(breaks = c(0.00, 0.33, 0.66, 1.00)) +
+  labs(title = "Stacked bar graph", subtitle = "relative proportions",
+       x = NULL, y = "Proportion") + 
+  theme_minimal()
+
+# a basic pie chart
+plt3 <- plt1 + coord_polar("y", start = 0) +
+  labs(title = "Friends don't let...", subtitle = "...friends make pie charts",
+       x = NULL, y = NULL) +
+  scale_fill_brewer(palette = "Blues") +
+  theme_minimal()
+# if you seriously want a pie chart, rather use the base R function, `pie()`
+
+# here now a bar graph...
+# the default mapping of `geom_bar` is `stat = count`, which is a 
+# bar for each fo the categories (`Species`), with `count` along y
+plt4 <- ggplot(data = iris, aes(x = Species, fill = Species)) +
+  geom_bar() +
+  labs(title = "Side-by-side bars", subtitle = "n per species", y = "Count") + 
+  theme_minimal()
+
+ggarrange(plt1, plt2, plt3, plt4, nrow = 2, ncol = 2, labels = "AUTO")
 ```
 
 <!-- show example of pie graph -->
