Chapter 6 filled in

--- a/04-graphics.Rmd
+++ b/04-graphics.Rmd
@@ -219,3 +219,7 @@ ggplot(data = arrange(filter(ChickWeight, Time == 21), weight), aes(x = Diet, y 
 ```
 
 ## Category statistics
+
+## Exercises
+
+### Exercise 1
