--- a/04-graphics.Rmd
+++ b/04-graphics.Rmd
@@ -3,8 +3,8 @@
 
 ```{r prelim-opts, echo=FALSE}
 knitr::opts_chunk$set(
-  comment = "R>", 
-  warning = FALSE, 
+  comment = "R>",
+  warning = FALSE,
   message = FALSE
 )
 ```
@@ -43,7 +43,7 @@ iris.cnt
 plt1 <- ggplot(data = iris.cnt, aes(x = "", y = n, fill = Species)) +
   geom_bar(width = 1, stat = "identity") +
   labs(title = "Stacked bar graph", subtitle = "cumulative sum",
-       x = NULL, y = "Count") + 
+       x = NULL, y = "Count") +
   theme_minimal()
 
 # a stacked bar graph with the relative proportions of observations
@@ -51,7 +51,7 @@ plt2 <- ggplot(data = iris.cnt, aes(x = "", y = prop, fill = Species)) +
   geom_bar(width = 1, stat = "identity") +
   scale_y_continuous(breaks = c(0.00, 0.33, 0.66, 1.00)) +
   labs(title = "Stacked bar graph", subtitle = "relative proportions",
-       x = NULL, y = "Proportion") + 
+       x = NULL, y = "Proportion") +
   theme_minimal()
 
 # a basic pie chart
@@ -63,11 +63,11 @@ plt3 <- plt1 + coord_polar("y", start = 0) +
 # if you seriously want a pie chart, rather use the base R function, `pie()`
 
 # here now a bar graph...
-# the default mapping of `geom_bar` is `stat = count`, which is a 
+# the default mapping of `geom_bar` is `stat = count`, which is a
 # bar for each fo the categories (`Species`), with `count` along y
 plt4 <- ggplot(data = iris, aes(x = Species, fill = Species)) +
   geom_bar(show.legend = FALSE) +
-  labs(title = "Side-by-side bars", subtitle = "n per species", y = "Count") + 
+  labs(title = "Side-by-side bars", subtitle = "n per species", y = "Count") +
   theme_minimal()
 
 ggarrange(plt1, plt2, plt3, plt4, nrow = 2, ncol = 2, labels = "AUTO")
@@ -125,6 +125,25 @@ hist4 <- ggplot(data = faithful, aes(x = eruptions)) +
 ggarrange(hist1, hist2, hist3, hist4, ncol = 2, nrow = 2, labels = "AUTO")
 ```
 
+What if we have continuous data belonging with multiple categories? The `iris` data provide a nice set of measurements that we may use to demonstrate a grouped frequency histogram. These data are size measurements (cm) of the variables sepal length and width and petal length and width, respectively, for 50 flowers from each of three species of *Iris*. The species are *Iris setosa*, *I. versicolor*, and *I. virginica*.
+
+```{r}
+# first we make long data
+iris.long <- iris %>% 
+  gather(key = "variable", value = "size", -Species)
+
+ggplot(data = iris.long, aes(x = size)) +
+  geom_histogram(position = "dodge", # ommitting this creates a stacked histogram
+                 colour = NA, bins = 20,
+                 aes(fill = Species)) +
+  facet_wrap(~variable) +
+  labs(title = "Iris data",
+       subtitle = "Grouped frequency histogram",
+       x = "Size (mm)",
+       y = "Count")
+```
+
+
 #### Box plots
 Box plots are sometimes called box-and-whisker plots. These graphs are a a graphical representation of the data based on its quartiles as well as its smallest and largest values. The keen eye can glance the 'shape' of the data distribution; they provide an alternative view to that given by the frequency distribution. A variation of the basic box-and-whisker plt is to superimpose a jittered scatter plot of the raw data on each bar.
 
@@ -133,9 +152,6 @@ Box plots are sometimes called box-and-whisker plots. These graphs are a a graph
 plt1 <- ggplot(data = iris, aes(x = Species, y = Sepal.Length, fill = Species)) +
   geom_boxplot(show.legend = FALSE) + theme_pubclean() +
   labs(y = "Sepal length (mm)")
-
-iris.long <- iris %>% 
-  gather(key = "variable", value = "size", -Species)
 
 plt2 <- ggplot(data = iris.long, aes(x = Species, y = size)) +
   geom_boxplot(fill = "red", alpha = 0.4) +
@@ -172,10 +188,10 @@ ggarrange(plt1, plt2, ncol = 2, nrow = 1, labels = "AUTO")
 Bar graphs display the mean plus/minus some measure of variation around the mean---typically the standard error or the standard deviation. The mean±SE and mean±SD are typically used for normally-distributed data. Here I provide an example bar graph for one of the Iris data set's variables:
 
 ```{r, fig.margin = TRUE, fig.cap="Boxplots of the mean±SD of the four Iris variables."}
-# first make nice labels for the facets because the default ones 
+# first make nice labels for the facets because the default ones
 # in the dataframe are not so nice; use the `labeller()` function
 # to receive the new variable names defined here
-facet.names <- c(Petal.Length = "Petal length", 
+facet.names <- c(Petal.Length = "Petal length",
                  Petal.Width = "Petal width",
                  Sepal.Length = "Sepal length",
                  Sepal.Width = "Sepal width")
@@ -184,9 +200,9 @@ facet.names <- c(Petal.Length = "Petal length",
 # we create summaries of mean and SD and squirt it directly
 # into the ggplot functions
 iris.long %>% 
-  group_by(Species, variable) %>% 
+  group_by(Species, variable) %>%
   summarise(mean.size = mean(size),
-            sd.size = sd(size)) %>% 
+            sd.size = sd(size)) %>%
   ggplot(aes(x = Species, y = mean.size)) +
   geom_bar(stat = "identity") +
   geom_errorbar(aes(ymin = mean.size - sd.size, ymax = mean.size + sd.size), width = 0.2) +
